renamed:    ../requirments.txt -> requirements3.txt

--- a/Install/requirements3.txt
+++ b/Install/requirements3.txt
@@ -1,7 +1,8 @@
-apscheduler
 dash
 dash_core_components
 dash_html_components
 sqlalchemy
-flask-sqlalchemy
-requests
+flask_login
+werkzeug
+flask_sqlalchemy
+gunicorn
